--- a/classes/namespacedef.html
+++ b/classes/namespacedef.html
@@ -2393,21 +2393,21 @@ img {
 					<a href="namespacedef.html#alias" class="tsd-kind-icon">alias</a>
 				</li>
 				<li class=" tsd-kind-method tsd-parent-kind-class">
-					<a href="namespacedef.html#qualify" class="tsd-kind-icon">qualify</a>
+					<a href="namespacedef.html#name" class="tsd-kind-icon">name</a>
 				</li>
 			</ul>
+		</li>
+		<li class=" tsd-kind-class">
+			<a href="naming.html" class="tsd-kind-icon">Naming</a>
 		</li>
 		<li class=" tsd-kind-type-alias">
 			<a href="../globals.html#nameandnamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
 		</li>
 		<li class=" tsd-kind-type-alias">
-			<a href="../globals.html#nameinnamespace" class="tsd-kind-icon">Name<wbr>InNamespace</a>
-		</li>
-		<li class=" tsd-kind-type-alias">
-			<a href="../globals.html#namescope" class="tsd-kind-icon">Name<wbr>Scope</a>
-		</li>
-		<li class=" tsd-kind-type-alias">
 			<a href="../globals.html#namespacealiaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
+		</li>
+		<li class=" tsd-kind-type-alias">
+			<a href="../globals.html#qualifiedname" class="tsd-kind-icon">Qualified<wbr>Name</a>
 		</li>
 		<li class=" tsd-kind-variable">
 			<a href="../globals.html#default__ns" class="tsd-kind-icon">DEFAULT__NS</a>
@@ -2430,6 +2430,21 @@ img {
 		<li class=" tsd-kind-variable">
 			<a href="../globals.html#xslt__ns" class="tsd-kind-icon">XSLT__NS</a>
 		</li>
+		<li class=" tsd-kind-variable">
+			<a href="../globals.html#css__naming" class="tsd-kind-icon">css__naming</a>
+		</li>
+		<li class=" tsd-kind-variable">
+			<a href="../globals.html#default__naming" class="tsd-kind-icon">default__naming</a>
+		</li>
+		<li class=" tsd-kind-variable">
+			<a href="../globals.html#html__naming" class="tsd-kind-icon">html__naming</a>
+		</li>
+		<li class=" tsd-kind-variable">
+			<a href="../globals.html#id__naming" class="tsd-kind-icon">id__naming</a>
+		</li>
+		<li class=" tsd-kind-variable">
+			<a href="../globals.html#xml__naming" class="tsd-kind-icon">xml__naming</a>
+		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#comparenames" class="tsd-kind-icon">compare<wbr>Names</a>
 		</li>
@@ -2437,7 +2452,7 @@ img {
 			<a href="../globals.html#isnameandnamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
 		</li>
 		<li class=" tsd-kind-function">
-			<a href="../globals.html#isnameinnamespace" class="tsd-kind-icon">is<wbr>Name<wbr>InNamespace</a>
+			<a href="../globals.html#isqualifiedname" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#nameandnamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
@@ -2450,21 +2465,6 @@ img {
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#newnamespacealiaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
-		</li>
-		<li class=" tsd-kind-function">
-			<a href="../globals.html#qualifycssname" class="tsd-kind-icon">qualify<wbr>Css<wbr>Name</a>
-		</li>
-		<li class=" tsd-kind-function">
-			<a href="../globals.html#qualifyhtmlname" class="tsd-kind-icon">qualify<wbr>Html<wbr>Name</a>
-		</li>
-		<li class=" tsd-kind-function">
-			<a href="../globals.html#qualifyid" class="tsd-kind-icon">qualify<wbr>Id</a>
-		</li>
-		<li class=" tsd-kind-function">
-			<a href="../globals.html#qualifyname" class="tsd-kind-icon">qualify<wbr>Name</a>
-		</li>
-		<li class=" tsd-kind-function">
-			<a href="../globals.html#qualifyxmlname" class="tsd-kind-icon">qualify<wbr>Xml<wbr>Name</a>
 		</li>
 	</ul>
 </nav>
@@ -2512,7 +2512,7 @@ img {
 					<section class="tsd-index-section ">
 						<h3>Methods</h3>
 						<ul class="tsd-index-list">
-							<li class="tsd-kind-method tsd-parent-kind-class"><a href="namespacedef.html#qualify" class="tsd-kind-icon">qualify</a></li>
+							<li class="tsd-kind-method tsd-parent-kind-class"><a href="namespacedef.html#name" class="tsd-kind-icon">name</a></li>
 						</ul>
 					</section>
 				</div>
@@ -2530,7 +2530,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/01fff8c/src/namespace.ts#L28">namespace.ts:28</a></li>
+								<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/a15bede/src/namespace.ts#L31">namespace.ts:31</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -2572,7 +2572,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">aliases<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">keyof string[]</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/01fff8c/src/namespace.ts#L19">namespace.ts:19</a></li>
+						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/a15bede/src/namespace.ts#L22">namespace.ts:22</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2587,7 +2587,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/01fff8c/src/namespace.ts#L14">namespace.ts:14</a></li>
+						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/a15bede/src/namespace.ts#L17">namespace.ts:17</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2605,7 +2605,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">alias<span class="tsd-signature-symbol">:</span> </div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/01fff8c/src/namespace.ts#L26">namespace.ts:26</a></li>
+						<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/a15bede/src/namespace.ts#L29">namespace.ts:29</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2619,28 +2619,23 @@ img {
 		<section class="tsd-panel-group tsd-member-group ">
 			<h2>Methods</h2>
 			<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-				<a name="qualify" class="tsd-anchor"></a>
-				<h3>qualify</h3>
+				<a name="name" class="tsd-anchor"></a>
+				<h3>name</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">qualify<span class="tsd-signature-symbol">(</span>alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, scope<span class="tsd-signature-symbol">?: </span><a href="../globals.html#namescope" class="tsd-signature-type">NameScope</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					<li class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">(</span>alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, naming<span class="tsd-signature-symbol">?: </span><a href="naming.html" class="tsd-signature-type">Naming</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/01fff8c/src/namespace.ts#L57">namespace.ts:57</a></li>
+								<li>Defined in <a href="https://github.com/surol/namespace-aliaser/blob/a15bede/src/namespace.ts#L57">namespace.ts:57</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
 							<div class="lead">
-								<p>Qualifies a local name in this namespace. E.g by prefixing it with namespace alias.</p>
+								<p>Converts a local <code>name</code> belonging to this namespace to simple one according to the given <code>naming</code> schema.</p>
 							</div>
-							<p>By default:</p>
-							<ul>
-								<li>qualifies <code>name</code> in <code>id</code> and <code>xml</code> scopes as <code>&lt;alias&gt;:&lt;name&gt;</code>, which is valid XML and HTML4 ID,</li>
-								<li>qualifies <code>name</code> in <code>css</code> scope as <code>&lt;name&gt;@&lt;alias&gt;</code>,</li>
-								<li>qualifies <code>name</code> in <code>html</code> and other scopes as <code>&lt;alias&gt;-&lt;name&gt;</code>.</li>
-							</ul>
+							<p>Calls <a href="naming.html#applyalias">Naming.applyAlias</a> by default.</p>
 						</div>
 						<h4 class="tsd-parameters-title">Parameters</h4>
 						<ul class="tsd-parameters">
@@ -2657,14 +2652,14 @@ img {
 								</div>
 							</li>
 							<li>
-								<h5><span class="tsd-flag ts-flagOptional">Optional</span> scope: <a href="../globals.html#namescope" class="tsd-signature-type">NameScope</a></h5>
+								<h5><span class="tsd-flag ts-flagDefault value">Default value</span> naming: <a href="naming.html" class="tsd-signature-type">Naming</a><span class="tsd-signature-symbol"> =&nbsp;default__naming</span></h5>
 								<div class="tsd-comment tsd-typography">
-									<p>Name usage scope.</p>
+									<p>Naming schema to use. <a href="../globals.html#default__naming">default naming schema</a> is used when omitted.</p>
 								</div>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
-						<p>A name qualified with namespace alias.</p>
+						<p>A simple name with this namespace alias applied.</p>
 					</li>
 				</ul>
 			</section>
