--- a/classes/NamespaceDef.html
+++ b/classes/NamespaceDef.html
@@ -198,7 +198,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/448f194/src/namespace.ts#L32">namespace.ts:32</a></li>
+								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/namespace.ts#L32">namespace.ts:32</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -222,7 +222,7 @@
 									<div class="lead">
 										<p>Preferred namespace aliases. It is expected that each alias is an ASCII letter followed by
 											any number of ASCII letters, digits, <code>-</code>, or <code>_</code> signs. Aliases starting with <code>xml</code> are reserved. Empty alias
-										is reserved for [default namespace]<a href="../globals.html#DEFAULT__NS">DEFAULT__NS</a>.</p>
+										is reserved for <a href="../globals.html#DEFAULT__NS">default namespace</a>.</p>
 									</div>
 								</div>
 							</li>
@@ -240,7 +240,7 @@
 				<div class="tsd-signature tsd-kind-icon">aliases<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/448f194/src/namespace.ts#L23">namespace.ts:23</a></li>
+						<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/namespace.ts#L23">namespace.ts:23</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -255,7 +255,7 @@
 				<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/448f194/src/namespace.ts#L18">namespace.ts:18</a></li>
+						<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/namespace.ts#L18">namespace.ts:18</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -277,7 +277,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/448f194/src/namespace.ts#L30">namespace.ts:30</a></li>
+								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/namespace.ts#L30">namespace.ts:30</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -303,7 +303,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/448f194/src/namespace.ts#L58">namespace.ts:58</a></li>
+								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/namespace.ts#L58">namespace.ts:58</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
