--- a/classes/Naming.html
+++ b/classes/Naming.html
@@ -46,6 +46,15 @@
 <nav class="tsd-navigation secondary">
 	<ul>
 		<li class=" tsd-kind-class">
+			<a href="CssNaming.html" class="tsd-kind-icon">Css<wbr>Naming</a>
+		</li>
+		<li class=" tsd-kind-class">
+			<a href="DefaultNaming.html" class="tsd-kind-icon">Default<wbr>Naming</a>
+		</li>
+		<li class=" tsd-kind-class">
+			<a href="DefaultNs.html" class="tsd-kind-icon">Default<wbr>Ns</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="NamespaceDef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
 		</li>
 		<li class="current tsd-kind-class">
@@ -58,6 +67,9 @@
 					<a href="Naming.html#name" class="tsd-kind-icon">name</a>
 				</li>
 			</ul>
+		</li>
+		<li class=" tsd-kind-class">
+			<a href="XmlNaming.html" class="tsd-kind-icon">Xml<wbr>Naming</a>
 		</li>
 		<li class=" tsd-kind-type-alias">
 			<a href="../globals.html#NameAndNamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
@@ -108,6 +120,9 @@
 			<a href="../globals.html#compareNames" class="tsd-kind-icon">compare<wbr>Names</a>
 		</li>
 		<li class=" tsd-kind-function">
+			<a href="../globals.html#compareStrings" class="tsd-kind-icon">compare<wbr>Strings</a>
+		</li>
+		<li class=" tsd-kind-function">
 			<a href="../globals.html#isNameAndNamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
 		</li>
 		<li class=" tsd-kind-function">
@@ -142,6 +157,17 @@
 			<ul class="tsd-hierarchy">
 				<li>
 					<span class="target">Naming</span>
+					<ul class="tsd-hierarchy">
+						<li>
+							<a href="DefaultNaming.html" class="tsd-signature-type">DefaultNaming</a>
+						</li>
+						<li>
+							<a href="XmlNaming.html" class="tsd-signature-type">XmlNaming</a>
+						</li>
+						<li>
+							<a href="CssNaming.html" class="tsd-signature-type">CssNaming</a>
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</section>
@@ -171,7 +197,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/naming.ts#L24">naming.ts:24</a></li>
+								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/16ac55d/src/naming.ts#L24">naming.ts:24</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -215,7 +241,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/f617980/src/naming.ts#L32">naming.ts:32</a></li>
+								<li>Defined in <a href="https://github.com/proc7ts/namespace-aliaser/blob/16ac55d/src/naming.ts#L32">naming.ts:32</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -251,6 +277,10 @@
 						<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 						<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
 						<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
+					</ul>
+					<ul class="tsd-legend">
+						<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
+						<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 					</ul>
 				</div>
 			</div>
