--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>Project Namespace Aliaser</h1>
+			<h1>Namespace Aliaser</h1>
 		</div>
 	</div>
 </header>
