--- a/modules.html
+++ b/modules.html
@@ -50,13 +50,22 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>Project Namespace Aliaser</h1>
+			<h1>Namespace Aliaser</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<dl class="tsd-comment-tags">
+						<dt>module</dt>
+						<dd><p>Module @frontmeans/namespace-aliaser</p>
+						</dd>
+					</dl>
+				</div>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -116,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">Name<wbr>And<wbr>Namespace<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L22">name.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L18">name.ts:18</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -132,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">Namespace<wbr>Aliaser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>ns<span class="tsd-signature-symbol">: </span><a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespace-aliaser.ts#L12">namespace-aliaser.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespace-aliaser.ts#L8">namespace-aliaser.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -145,7 +154,7 @@
 						<h4>Type declaration</h4>
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-signature">
-								<ul class="tsd-signatures tsd-kind-type-literal">
+								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-type-alias">
 									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>ns<span class="tsd-signature-symbol">: </span><a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
@@ -173,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">Qualified<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#nameandnamespace" class="tsd-signature-type" data-tsd-kind="Type alias">NameAndNamespace</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L15">name.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L11">name.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -196,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/default.ns.ts#L29">default.ns.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/default.ns.ts#L25">default.ns.ts:25</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -213,7 +222,7 @@
 					<div class="tsd-signature tsd-kind-icon">MathML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L10">namespaces.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L6">namespaces.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -228,7 +237,7 @@
 					<div class="tsd-signature tsd-kind-icon">SVG__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L15">namespaces.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L11">namespaces.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -243,7 +252,7 @@
 					<div class="tsd-signature tsd-kind-icon">XHTML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L20">namespaces.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L16">namespaces.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -258,7 +267,7 @@
 					<div class="tsd-signature tsd-kind-icon">XMLNS__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L34">namespaces.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L30">namespaces.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -274,7 +283,7 @@
 					<div class="tsd-signature tsd-kind-icon">XML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L27">namespaces.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L23">namespaces.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -290,7 +299,7 @@
 					<div class="tsd-signature tsd-kind-icon">XSLT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespaces.ts#L39">namespaces.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L35">namespaces.ts:35</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -305,7 +314,7 @@
 					<div class="tsd-signature tsd-kind-icon">css__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namings.ts#L83">namings.ts:83</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L79">namings.ts:79</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -322,7 +331,7 @@
 					<div class="tsd-signature tsd-kind-icon">default__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namings.ts#L25">namings.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L21">namings.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -339,7 +348,7 @@
 					<div class="tsd-signature tsd-kind-icon">html__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namings.ts#L34">namings.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L30">namings.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -356,7 +365,7 @@
 					<div class="tsd-signature tsd-kind-icon">id__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namings.ts#L63">namings.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L59">namings.ts:59</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -373,7 +382,7 @@
 					<div class="tsd-signature tsd-kind-icon">xml__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namings.ts#L54">namings.ts:54</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L50">namings.ts:50</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -391,13 +400,13 @@
 					<a name="comparenames" class="tsd-anchor"></a>
 					<h3>compare<wbr>Names</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">compare<wbr>Names<span class="tsd-signature-symbol">(</span>first<span class="tsd-signature-symbol">: </span><a href="modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a>, second<span class="tsd-signature-symbol">: </span><a href="modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">-1</span></li>
+						<li class="tsd-signature tsd-kind-icon">compare<wbr>Names<span class="tsd-signature-symbol">(</span>first<span class="tsd-signature-symbol">: </span><a href="modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a>, second<span class="tsd-signature-symbol">: </span><a href="modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">-1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">1</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L108">name.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L104">name.ts:104</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -421,7 +430,7 @@
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">-1</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">-1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">1</span></h4>
 							<p><code>-1</code> if the <code>first</code> name is less than the <code>second</code> one, <code>0</code> if they are equal, or <code>1</code> if the <code>first</code> name
 							is greater than the <code>second</code> one.</p>
 						</li>
@@ -437,7 +446,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L32">name.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L28">name.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -470,7 +479,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L48">name.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L44">name.ts:44</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -504,7 +513,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L71">name.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L67">name.ts:67</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -537,7 +546,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L83">name.ts:83</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L79">name.ts:79</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -575,7 +584,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/name.ts#L59">name.ts:59</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L55">name.ts:55</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -607,7 +616,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4cdbe1a/src/namespace-aliaser.ts#L28">namespace-aliaser.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespace-aliaser.ts#L24">namespace-aliaser.ts:24</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
