--- a/modules.html
+++ b/modules.html
@@ -57,15 +57,6 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-					<dl class="tsd-comment-tags">
-						<dt>module</dt>
-						<dd><p>Module @frontmeans/namespace-aliaser</p>
-						</dd>
-					</dl>
-				</div>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -125,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">Name<wbr>And<wbr>Namespace<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L18">name.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L18">name.ts:18</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -141,15 +132,9 @@
 					<div class="tsd-signature tsd-kind-icon">Namespace<wbr>Aliaser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>ns<span class="tsd-signature-symbol">: </span><a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespace-aliaser.ts#L8">namespace-aliaser.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-aliaser.ts#L8">namespace-aliaser.ts:8</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Namespace aliaser function interface.</p>
-						</div>
-						<p>Maps namespaces to their unique aliases.</p>
-					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
 						<ul class="tsd-parameters">
@@ -159,6 +144,12 @@
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
+										<div class="tsd-comment tsd-typography">
+											<div class="lead">
+												<p>Namespace aliaser function interface.</p>
+											</div>
+											<p>Maps namespaces to their unique aliases.</p>
+										</div>
 										<h4 class="tsd-parameters-title">Parameters</h4>
 										<ul class="tsd-parameters">
 											<li>
@@ -182,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">Qualified<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#nameandnamespace" class="tsd-signature-type" data-tsd-kind="Type alias">NameAndNamespace</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L11">name.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L11">name.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -205,7 +196,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/default.ns.ts#L25">default.ns.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/default.ns.ts#L25">default.ns.ts:25</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -222,7 +213,7 @@
 					<div class="tsd-signature tsd-kind-icon">MathML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L6">namespaces.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L6">namespaces.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -237,7 +228,7 @@
 					<div class="tsd-signature tsd-kind-icon">SVG__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L11">namespaces.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L11">namespaces.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -252,7 +243,7 @@
 					<div class="tsd-signature tsd-kind-icon">XHTML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L16">namespaces.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L16">namespaces.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -267,7 +258,7 @@
 					<div class="tsd-signature tsd-kind-icon">XMLNS__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L30">namespaces.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L30">namespaces.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -283,7 +274,7 @@
 					<div class="tsd-signature tsd-kind-icon">XML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L23">namespaces.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L23">namespaces.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -299,7 +290,7 @@
 					<div class="tsd-signature tsd-kind-icon">XSLT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespaces.ts#L35">namespaces.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespaces.ts#L35">namespaces.ts:35</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -314,7 +305,7 @@
 					<div class="tsd-signature tsd-kind-icon">css__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L79">namings.ts:79</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namings.ts#L79">namings.ts:79</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -331,7 +322,7 @@
 					<div class="tsd-signature tsd-kind-icon">default__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L21">namings.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namings.ts#L21">namings.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -348,7 +339,7 @@
 					<div class="tsd-signature tsd-kind-icon">html__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L30">namings.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namings.ts#L30">namings.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -365,7 +356,7 @@
 					<div class="tsd-signature tsd-kind-icon">id__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L59">namings.ts:59</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namings.ts#L59">namings.ts:59</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -382,7 +373,7 @@
 					<div class="tsd-signature tsd-kind-icon">xml__naming<span class="tsd-signature-symbol">:</span> <a href="classes/naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namings.ts#L50">namings.ts:50</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namings.ts#L50">namings.ts:50</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -406,7 +397,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L104">name.ts:104</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L114">name.ts:114</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -446,7 +437,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L28">name.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L28">name.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -479,7 +470,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L44">name.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L54">name.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -497,9 +488,8 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">value</span><span class="tsd-signature-symbol"> is </span><a href="modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a></h4>
-							<p><code>true</code> if the given <code>value</code> is a non-empty string or an array consisting of exactly two elements,
-								where the first element is a non-empty string, and the second element is an instance of <a href="classes/namespacedef.html">NamespaceDef</a>.
-							Or <code>false</code> otherwise.</p>
+							<p><code>true</code> if the given <code>value</code> is a string, or an array consisting of exactly two elements, where the first
+							element is a non-empty string, and the second element is an instance of <a href="classes/namespacedef.html">NamespaceDef</a>. <code>false</code> otherwise.</p>
 						</li>
 					</ul>
 				</section>
@@ -513,7 +503,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L67">name.ts:67</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L77">name.ts:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -546,7 +536,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L79">name.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L89">name.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -584,7 +574,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/name.ts#L55">name.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/name.ts#L65">name.ts:65</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -616,7 +606,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/4d7ee0b/src/namespace-aliaser.ts#L24">namespace-aliaser.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-aliaser.ts#L24">namespace-aliaser.ts:24</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
