--- a/index.html
+++ b/index.html
@@ -218,40 +218,43 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
-						<a href="classes/namespacedef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
+						<a href="classes/NamespaceDef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="classes/naming.html" class="tsd-kind-icon">Naming</a>
+						<a href="classes/Naming.html" class="tsd-kind-icon">Naming</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="modules.html#nameandnamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
+						<a href="modules.html#NameAndNamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="modules.html#namespacealiaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
+						<a href="modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="modules.html#qualifiedname" class="tsd-kind-icon">Qualified<wbr>Name</a>
+						<a href="modules.html#QualifiedName" class="tsd-kind-icon">Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#default__ns" class="tsd-kind-icon">DEFAULT__NS</a>
+						<a href="modules.html#DEFAULT__NS" class="tsd-kind-icon">DEFAULT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#mathml__ns" class="tsd-kind-icon">MathML__NS</a>
+						<a href="modules.html#MathML__NS" class="tsd-kind-icon">MathML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#svg__ns" class="tsd-kind-icon">SVG__NS</a>
+						<a href="modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#xhtml__ns" class="tsd-kind-icon">XHTML__NS</a>
+						<a href="modules.html#SVG__NS" class="tsd-kind-icon">SVG__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#xmlns__ns" class="tsd-kind-icon">XMLNS__NS</a>
+						<a href="modules.html#XHTML__NS" class="tsd-kind-icon">XHTML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#xml__ns" class="tsd-kind-icon">XML__NS</a>
+						<a href="modules.html#XMLNS__NS" class="tsd-kind-icon">XMLNS__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="modules.html#xslt__ns" class="tsd-kind-icon">XSLT__NS</a>
+						<a href="modules.html#XML__NS" class="tsd-kind-icon">XML__NS</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#XSLT__NS" class="tsd-kind-icon">XSLT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#css__naming" class="tsd-kind-icon">css__naming</a>
@@ -269,25 +272,25 @@
 						<a href="modules.html#xml__naming" class="tsd-kind-icon">xml__naming</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#comparenames" class="tsd-kind-icon">compare<wbr>Names</a>
+						<a href="modules.html#compareNames" class="tsd-kind-icon">compare<wbr>Names</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#isnameandnamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
+						<a href="modules.html#isNameAndNamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#isqualifiedname" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
+						<a href="modules.html#isQualifiedName" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#nameandnamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
+						<a href="modules.html#nameAndNamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#namesequal" class="tsd-kind-icon">names<wbr>Equal</a>
+						<a href="modules.html#namesEqual" class="tsd-kind-icon">names<wbr>Equal</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#namespaceof" class="tsd-kind-icon">namespace<wbr>Of</a>
+						<a href="modules.html#namespaceOf" class="tsd-kind-icon">namespace<wbr>Of</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="modules.html#newnamespacealiaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
+						<a href="modules.html#newNamespaceAliaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
 					</li>
 				</ul>
 			</nav>
