--- a/classes/NamespaceDef.html
+++ b/classes/NamespaceDef.html
@@ -55,7 +55,7 @@
 					<a href="../modules.html">Namespace Aliaser</a>
 				</li>
 				<li>
-					<a href="namespacedef.html">NamespaceDef</a>
+					<a href="NamespaceDef.html">NamespaceDef</a>
 				</li>
 			</ul>
 			<h1>Class NamespaceDef</h1>
@@ -88,26 +88,26 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="namespacedef.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="NamespaceDef.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="namespacedef.html#aliases" class="tsd-kind-icon">aliases</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="namespacedef.html#url" class="tsd-kind-icon">url</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="NamespaceDef.html#aliases" class="tsd-kind-icon">aliases</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="NamespaceDef.html#url" class="tsd-kind-icon">url</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Accessors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="namespacedef.html#alias" class="tsd-kind-icon">alias</a></li>
+								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="NamespaceDef.html#alias" class="tsd-kind-icon">alias</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="namespacedef.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="NamespaceDef.html#name" class="tsd-kind-icon">name</a></li>
 							</ul>
 						</section>
 					</div>
@@ -119,13 +119,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Namespace<wbr>Def<span class="tsd-signature-symbol">(</span>url<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, <span class="tsd-signature-symbol">...</span>aliases<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Namespace<wbr>Def<span class="tsd-signature-symbol">(</span>url<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, <span class="tsd-signature-symbol">...</span>aliases<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-def.ts#L28">namespace-def.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-def.ts#L38">namespace-def.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -138,19 +138,23 @@
 								<li>
 									<h5>url: <span class="tsd-signature-type">string</span></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>Unique namespace URL.</p>
+										<div class="lead">
+											<p>Unique namespace URL.</p>
+										</div>
 									</div>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>aliases: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>Preferred namespace aliases. It is expected that each alias is an ASCII letter followed by
-											any number of ASCII letters, digits, <code>-</code>, or <code>_</code> signs. Aliases starting with <code>xml</code> are reserved. Empty alias
-										is reserved for <a href="../modules.html#default__ns">default namespace</a>.</p>
+										<div class="lead">
+											<p>Preferred namespace aliases. It is expected that each alias is an ASCII letter followed by
+												any number of ASCII letters, digits, <code>-</code>, or <code>_</code> signs. Aliases starting with <code>xml</code> are reserved. Empty alias
+											is reserved for <a href="../modules.html#DEFAULT__NS">default namespace</a>.</p>
+										</div>
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -163,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">aliases<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-def.ts#L19">namespace-def.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-def.ts#L19">namespace-def.ts:19</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -178,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-def.ts#L14">namespace-def.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-def.ts#L14">namespace-def.ts:14</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -200,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-def.ts#L26">namespace-def.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-def.ts#L26">namespace-def.ts:26</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -220,20 +224,20 @@
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">(</span>alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, naming<span class="tsd-signature-symbol">?: </span><a href="naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+						<li class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">(</span>alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, naming<span class="tsd-signature-symbol">?: </span><a href="Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/namespace-def.ts#L54">namespace-def.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-def.ts#L54">namespace-def.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Converts a local <code>name</code> belonging to this namespace to simple one according to the given <code>naming</code> schema.</p>
 								</div>
-								<p>Calls <a href="naming.html#applyalias">Naming.applyAlias</a> by default.</p>
+								<p>Calls <a href="Naming.html#applyAlias">Naming.applyAlias</a> by default.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -250,7 +254,7 @@
 									</div>
 								</li>
 								<li>
-									<h5>naming: <a href="naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></h5>
+									<h5>naming: <a href="Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Naming schema to use. <a href="../modules.html#default__naming">default naming schema</a> is used when omitted.</p>
 									</div>
@@ -276,59 +280,62 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class">
-						<a href="namespacedef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
+						<a href="NamespaceDef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="namespacedef.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="NamespaceDef.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="namespacedef.html#aliases" class="tsd-kind-icon">aliases</a>
+								<a href="NamespaceDef.html#aliases" class="tsd-kind-icon">aliases</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="namespacedef.html#url" class="tsd-kind-icon">url</a>
+								<a href="NamespaceDef.html#url" class="tsd-kind-icon">url</a>
 							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
-								<a href="namespacedef.html#alias" class="tsd-kind-icon">alias</a>
+								<a href="NamespaceDef.html#alias" class="tsd-kind-icon">alias</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="namespacedef.html#name" class="tsd-kind-icon">name</a>
+								<a href="NamespaceDef.html#name" class="tsd-kind-icon">name</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-class">
-						<a href="naming.html" class="tsd-kind-icon">Naming</a>
+						<a href="Naming.html" class="tsd-kind-icon">Naming</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#nameandnamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#NameAndNamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#namespacealiaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
+						<a href="../modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#qualifiedname" class="tsd-kind-icon">Qualified<wbr>Name</a>
+						<a href="../modules.html#QualifiedName" class="tsd-kind-icon">Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#default__ns" class="tsd-kind-icon">DEFAULT__NS</a>
+						<a href="../modules.html#DEFAULT__NS" class="tsd-kind-icon">DEFAULT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#mathml__ns" class="tsd-kind-icon">MathML__NS</a>
+						<a href="../modules.html#MathML__NS" class="tsd-kind-icon">MathML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#svg__ns" class="tsd-kind-icon">SVG__NS</a>
+						<a href="../modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xhtml__ns" class="tsd-kind-icon">XHTML__NS</a>
+						<a href="../modules.html#SVG__NS" class="tsd-kind-icon">SVG__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xmlns__ns" class="tsd-kind-icon">XMLNS__NS</a>
+						<a href="../modules.html#XHTML__NS" class="tsd-kind-icon">XHTML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xml__ns" class="tsd-kind-icon">XML__NS</a>
+						<a href="../modules.html#XMLNS__NS" class="tsd-kind-icon">XMLNS__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xslt__ns" class="tsd-kind-icon">XSLT__NS</a>
+						<a href="../modules.html#XML__NS" class="tsd-kind-icon">XML__NS</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#XSLT__NS" class="tsd-kind-icon">XSLT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#css__naming" class="tsd-kind-icon">css__naming</a>
@@ -346,25 +353,25 @@
 						<a href="../modules.html#xml__naming" class="tsd-kind-icon">xml__naming</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#comparenames" class="tsd-kind-icon">compare<wbr>Names</a>
+						<a href="../modules.html#compareNames" class="tsd-kind-icon">compare<wbr>Names</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#isnameandnamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#isNameAndNamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#isqualifiedname" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
+						<a href="../modules.html#isQualifiedName" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#nameandnamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#nameAndNamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#namesequal" class="tsd-kind-icon">names<wbr>Equal</a>
+						<a href="../modules.html#namesEqual" class="tsd-kind-icon">names<wbr>Equal</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#namespaceof" class="tsd-kind-icon">namespace<wbr>Of</a>
+						<a href="../modules.html#namespaceOf" class="tsd-kind-icon">namespace<wbr>Of</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#newnamespacealiaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
+						<a href="../modules.html#newNamespaceAliaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
 					</li>
 				</ul>
 			</nav>
