--- a/classes/Naming.html
+++ b/classes/Naming.html
@@ -55,7 +55,7 @@
 					<a href="../modules.html">Namespace Aliaser</a>
 				</li>
 				<li>
-					<a href="naming.html">Naming</a>
+					<a href="Naming.html">Naming</a>
 				</li>
 			</ul>
 			<h1>Class Naming</h1>
@@ -88,14 +88,14 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="naming.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="Naming.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="naming.html#applyalias" class="tsd-kind-icon">apply<wbr>Alias</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="naming.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="Naming.html#applyAlias" class="tsd-kind-icon">apply<wbr>Alias</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="Naming.html#name" class="tsd-kind-icon">name</a></li>
 							</ul>
 						</section>
 					</div>
@@ -107,13 +107,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Naming<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Naming<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 							</aside>
-							<h4 class="tsd-returns-title">Returns <a href="naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -121,16 +121,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="applyalias" class="tsd-anchor"></a>
+					<a name="applyAlias" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagAbstract">Abstract</span> apply<wbr>Alias</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">apply<wbr>Alias<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, namespace<span class="tsd-signature-symbol">: </span><a href="namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+						<li class="tsd-signature tsd-kind-icon">apply<wbr>Alias<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, alias<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, namespace<span class="tsd-signature-symbol">: </span><a href="NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/naming.ts#L20">naming.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/naming.ts#L20">naming.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -153,7 +153,7 @@
 									</div>
 								</li>
 								<li>
-									<h5>namespace: <a href="namespacedef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></h5>
+									<h5>namespace: <a href="NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Aliased namespace definition.</p>
 									</div>
@@ -168,13 +168,13 @@
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="../modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a>, nsAlias<span class="tsd-signature-symbol">: </span><a href="../modules.html#namespacealiaser" class="tsd-signature-type" data-tsd-kind="Type alias">NamespaceAliaser</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+						<li class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="../modules.html#QualifiedName" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a>, nsAlias<span class="tsd-signature-symbol">: </span><a href="../modules.html#NamespaceAliaser" class="tsd-signature-type" data-tsd-kind="Variable">NamespaceAliaser</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/b3f3af3/src/naming.ts#L28">naming.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/naming.ts#L28">naming.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -185,13 +185,13 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>name: <a href="../modules.html#qualifiedname" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a></h5>
+									<h5>name: <a href="../modules.html#QualifiedName" class="tsd-signature-type" data-tsd-kind="Type alias">QualifiedName</a></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Qualified name to convert.</p>
 									</div>
 								</li>
 								<li>
-									<h5>nsAlias: <a href="../modules.html#namespacealiaser" class="tsd-signature-type" data-tsd-kind="Type alias">NamespaceAliaser</a></h5>
+									<h5>nsAlias: <a href="../modules.html#NamespaceAliaser" class="tsd-signature-type" data-tsd-kind="Variable">NamespaceAliaser</a></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Namespace aliaser to use.</p>
 									</div>
@@ -214,55 +214,58 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
-						<a href="namespacedef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
+						<a href="NamespaceDef.html" class="tsd-kind-icon">Namespace<wbr>Def</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class">
-						<a href="naming.html" class="tsd-kind-icon">Naming</a>
+						<a href="Naming.html" class="tsd-kind-icon">Naming</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="naming.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="Naming.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="naming.html#applyalias" class="tsd-kind-icon">apply<wbr>Alias</a>
+								<a href="Naming.html#applyAlias" class="tsd-kind-icon">apply<wbr>Alias</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="naming.html#name" class="tsd-kind-icon">name</a>
+								<a href="Naming.html#name" class="tsd-kind-icon">name</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#nameandnamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#NameAndNamespace" class="tsd-kind-icon">Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#namespacealiaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
+						<a href="../modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#qualifiedname" class="tsd-kind-icon">Qualified<wbr>Name</a>
+						<a href="../modules.html#QualifiedName" class="tsd-kind-icon">Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#default__ns" class="tsd-kind-icon">DEFAULT__NS</a>
+						<a href="../modules.html#DEFAULT__NS" class="tsd-kind-icon">DEFAULT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#mathml__ns" class="tsd-kind-icon">MathML__NS</a>
+						<a href="../modules.html#MathML__NS" class="tsd-kind-icon">MathML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#svg__ns" class="tsd-kind-icon">SVG__NS</a>
+						<a href="../modules.html#NamespaceAliaser" class="tsd-kind-icon">Namespace<wbr>Aliaser</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xhtml__ns" class="tsd-kind-icon">XHTML__NS</a>
+						<a href="../modules.html#SVG__NS" class="tsd-kind-icon">SVG__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xmlns__ns" class="tsd-kind-icon">XMLNS__NS</a>
+						<a href="../modules.html#XHTML__NS" class="tsd-kind-icon">XHTML__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xml__ns" class="tsd-kind-icon">XML__NS</a>
+						<a href="../modules.html#XMLNS__NS" class="tsd-kind-icon">XMLNS__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#xslt__ns" class="tsd-kind-icon">XSLT__NS</a>
+						<a href="../modules.html#XML__NS" class="tsd-kind-icon">XML__NS</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#XSLT__NS" class="tsd-kind-icon">XSLT__NS</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#css__naming" class="tsd-kind-icon">css__naming</a>
@@ -280,25 +283,25 @@
 						<a href="../modules.html#xml__naming" class="tsd-kind-icon">xml__naming</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#comparenames" class="tsd-kind-icon">compare<wbr>Names</a>
+						<a href="../modules.html#compareNames" class="tsd-kind-icon">compare<wbr>Names</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#isnameandnamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#isNameAndNamespace" class="tsd-kind-icon">is<wbr>Name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#isqualifiedname" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
+						<a href="../modules.html#isQualifiedName" class="tsd-kind-icon">is<wbr>Qualified<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#nameandnamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
+						<a href="../modules.html#nameAndNamespace" class="tsd-kind-icon">name<wbr>And<wbr>Namespace</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#namesequal" class="tsd-kind-icon">names<wbr>Equal</a>
+						<a href="../modules.html#namesEqual" class="tsd-kind-icon">names<wbr>Equal</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#namespaceof" class="tsd-kind-icon">namespace<wbr>Of</a>
+						<a href="../modules.html#namespaceOf" class="tsd-kind-icon">namespace<wbr>Of</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#newnamespacealiaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
+						<a href="../modules.html#newNamespaceAliaser" class="tsd-kind-icon">new<wbr>Namespace<wbr>Aliaser</a>
 					</li>
 				</ul>
 			</nav>
